k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato-app
  namespace: zomato
  labels:
    app: zomato-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zomato-app
  template:
    metadata:
      labels:
        app: zomato-app
    spec:
      containers:
      - name: zomato
        image: harshalg01/zomato-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
