k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato-svc
  namespace: zomato
  labels:
    app: zomato-app
spec:
  type: ClusterIP
  selector:
    app: zomato-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
